--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Sourabh Paswan Portfolio</title>
+<title>Sourabh Paswan Recruiter Portfolio</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<style>
+body {font-family:Poppins, sans-serif;}
+.glass {background:rgba(255,255,255,0.08); backdrop-filter:blur(18px); border-radius:20px; border:1px solid rgba(255,255,255,0.15);} 
+.fade {animation:fade 1.2s ease forwards;}
+@keyframes fade {from{opacity:0; transform:translateY(30px);} to{opacity:1; transform:translateY(0);}}
+.card3d:hover {transform:rotateY(8deg) scale(1.05); transition:0.4s ease;}
+</style>
 </head>
 <body>
 <div id="root"></div>
@@ -17,82 +25,79 @@ function App(){
 const [dark,setDark]=React.useState(true);
 
 return (
-<div className={dark?"bg-gray-900 text-white":"bg-white text-gray-900"}>
+<div className={dark?"bg-gradient-to-br from-black via-gray-900 to-black text-white":"bg-gray-100 text-black"}>
 
-{/* Navbar */}
-<nav className="flex justify-between p-5 shadow-lg sticky top-0 bg-opacity-90 backdrop-blur">
-<h1 className="font-bold text-xl">Sourabh Paswan</h1>
-<button
-onClick={()=>setDark(!dark)}
-className="border px-4 py-1 rounded-full">
-{dark?"Light Mode":"Dark Mode"}
-</button>
+{/* NAV */}
+<nav className="flex justify-between items-center px-8 py-4 sticky top-0 backdrop-blur z-50">
+<h1 className="text-2xl font-bold">Sourabh Paswan</h1>
+<div className="flex gap-4">
+<button onClick={()=>setDark(!dark)} className="glass px-4 py-1">Mode</button>
+<a href="https://wa.me/918103665109" target="_blank" className="bg-green-500 px-5 py-1 rounded-full">WhatsApp</a>
+</div>
 </nav>
 
-{/* Hero */}
-<section className="min-h-screen flex flex-col items-center justify-center text-center p-6">
-<img src="your-photo.jpg" alt="profile" className="w-40 h-40 rounded-full mb-5 shadow-xl object-cover"/>
-<h1 className="text-4xl font-bold mb-3">Customer Support Specialist</h1>
-<p className="max-w-xl mb-5 opacity-80">
-2+ years experience supporting global customers (Amazon, Insurance BPO),
-specialized in CRM handling, issue resolution, logistics support, and customer satisfaction improvement.
+{/* HERO */}
+<section className="min-h-screen flex flex-col justify-center items-center text-center px-6 fade">
+<img src="your-photo.jpg" className="w-44 h-44 rounded-full shadow-2xl mb-6 object-cover"/>
+<h1 className="text-5xl font-bold mb-4">Customer Support Specialist</h1>
+<p className="max-w-xl opacity-80 mb-6">
+Helping global businesses deliver exceptional customer experience through voice, chat, email, and CRM support.
 </p>
 <div className="flex gap-4">
-<a href="resume.pdf" download className="bg-blue-600 px-6 py-2 rounded-full text-white shadow-lg hover:scale-105 transition">Download Resume</a>
-<a href="#contact" className="border px-6 py-2 rounded-full hover:scale-105 transition">Hire Me</a>
+<a href="resume.pdf" download className="bg-blue-600 px-6 py-3 rounded-full">Download Resume</a>
+<a href="#contact" className="glass px-6 py-3">Hire Me</a>
 </div>
 </section>
 
-{/* Recruiter Focus */}
-<section className="p-10 max-w-5xl mx-auto">
-<h2 className="text-3xl font-bold mb-5">Why Hire Me</h2>
-<ul className="space-y-3 opacity-90">
-<li>✔ 2+ years international customer support experience</li>
-<li>✔ Strong communication (English + Hindi)</li>
-<li>✔ CRM tools, logistics & financial support expertise</li>
-<li>✔ Proven customer satisfaction improvement</li>
-<li>✔ Remote work experience</li>
-</ul>
-</section>
-
-{/* Projects */}
-<section className="p-10 bg-opacity-10">
-<h2 className="text-3xl font-bold text-center mb-8">Professional Highlights</h2>
-<div className="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-<div className="p-6 rounded-2xl shadow-lg hover:scale-105 transition">
-<h3 className="font-bold mb-2">Amazon Support</h3>
-<p>Handled North America customer queries, logistics and financial support.</p>
+{/* CUSTOMER SUPPORT TYPES */}
+<section className="max-w-6xl mx-auto p-12 fade">
+<h2 className="text-4xl font-bold text-center mb-10">Customer Support Expertise</h2>
+<div className="grid md:grid-cols-3 gap-8">
+<div className="glass p-6 card3d">
+<h3 className="font-bold mb-2">Voice Support</h3>
+<p>Handled international calls resolving logistics, order, and financial issues.</p>
 </div>
-<div className="p-6 rounded-2xl shadow-lg hover:scale-105 transition">
-<h3 className="font-bold mb-2">Insurance Process</h3>
-<p>Resolved policy and claims issues improving customer experience.</p>
+<div className="glass p-6 card3d">
+<h3 className="font-bold mb-2">Chat & Email</h3>
+<p>Non-voice customer assistance with fast response and documentation.</p>
 </div>
-<div className="p-6 rounded-2xl shadow-lg hover:scale-105 transition">
-<h3 className="font-bold mb-2">Team Training</h3>
-<p>Trained associates on CRM tools and customer handling skills.</p>
+<div className="glass p-6 card3d">
+<h3 className="font-bold mb-2">CRM Operations</h3>
+<p>Ticket management, reporting, customer insights, workflow optimization.</p>
 </div>
 </div>
 </section>
 
-{/* Testimonials */}
-<section className="p-10">
-<h2 className="text-3xl font-bold text-center mb-6">Testimonials</h2>
-<div className="max-w-3xl mx-auto space-y-4 opacity-80">
-<div className="p-5 rounded-xl shadow">"Excellent communication and professional attitude."</div>
-<div className="p-5 rounded-xl shadow">"Highly reliable support specialist."</div>
+{/* WHY HIRE */}
+<section className="max-w-5xl mx-auto p-10 fade">
+<h2 className="text-4xl font-bold text-center mb-6">Why Recruiters Hire Me</h2>
+<div className="grid md:grid-cols-2 gap-6">
+<div className="glass p-5">✔ 2+ Years BPO Experience</div>
+<div className="glass p-5">✔ Amazon + Insurance Support</div>
+<div className="glass p-5">✔ International Client Handling</div>
+<div className="glass p-5">✔ Customer Satisfaction Focus</div>
 </div>
 </section>
 
-{/* Contact */}
-<section id="contact" className="p-10 text-center">
-<h2 className="text-3xl font-bold mb-4">Contact</h2>
+{/* TESTIMONIALS */}
+<section className="p-12 fade">
+<h2 className="text-4xl font-bold text-center mb-8">Recruiter Testimonials</h2>
+<div className="max-w-4xl mx-auto space-y-6">
+<div className="glass p-6">⭐ "Strong communicator and dependable support professional." – Supervisor</div>
+<div className="glass p-6">⭐ "Great at handling customers calmly and efficiently." – Manager</div>
+</div>
+</section>
+
+{/* CONTACT */}
+<section id="contact" className="text-center p-12 fade">
+<h2 className="text-4xl font-bold mb-6">Contact</h2>
 <p>Email: adhyanshpaswan09@gmail.com</p>
-<p>Phone: +91 8103665109,9691352809</p>
-<p>Location: Indore, India</p>
+<p>Phone: +91 8103665109, 9691352809</p>
+<p>Indore, India</p>
 </section>
 
-<footer className="text-center p-4 opacity-70">
-© 2026 Sourabh Paswan Portfolio
+<footer className="text-center p-6 opacity-70">
+© 2026 Sourabh Paswan Recruiter Portfolio
 </footer>
 
 </div>
@@ -102,3 +107,4 @@ ReactDOM.createRoot(document.getElementById('root')).render(<App/>);
 </script>
 </body>
 </html>
+
