--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
 body {font-family:Inter,sans-serif;}
 .glass {background:rgba(255,255,255,0.06);backdrop-filter:blur(20px);border:1px solid rgba(255,255,255,0.12);border-radius:22px;}
 .heroGlow {background:radial-gradient(circle at center,#2563eb55,transparent 60%);} 
-.card3d:hover{transform:translateY(-6px) scale(1.04);transition:.4s}
-.fade{animation:fade 1.2s ease forwards}
-@keyframes fade{from{opacity:0;transform:translateY(40px)}to{opacity:1;transform:translateY(0)}}
+.float {animation:float 6s ease-in-out infinite}
+@keyframes float {0%,100%{transform:translateY(0)}50%{transform:translateY(-12px)}}
 </style>
 </head>
 <body>
 <div id="root"></div>
 
 <script type="text/babel">
+const { motion } = window['framer-motion'];
+
 function App(){
 const [dark,setDark]=React.useState(true);
 
@@ -29,69 +31,62 @@ return (
 <div className={dark?"bg-black text-white":"bg-gray-100 text-black"}>
 
 {/* NAVBAR */}
-<nav className="flex justify-between items-center px-10 py-5 sticky top-0 backdrop-blur z-50">
+<motion.nav initial={{y:-60,opacity:0}} animate={{y:0,opacity:1}} className="flex justify-between items-center px-10 py-5 sticky top-0 backdrop-blur z-50">
 <h1 className="text-2xl font-extrabold tracking-wide">Sourabh Paswan</h1>
 <div className="flex gap-4">
-<button onClick={()=>setDark(!dark)} className="glass px-4 py-1">Mode</button>
-<a href="https://wa.me/918103665109" target="_blank" className="bg-green-500 px-5 py-1 rounded-full">WhatsApp</a>
+<button onClick={()=>setDark(!dark)} className="glass px-4 py-1 hover:scale-105 transition">Mode</button>
+<a href="https://wa.me/918103665109" target="_blank" className="bg-green-500 px-5 py-1 rounded-full hover:scale-105 transition">WhatsApp</a>
 </div>
-</nav>
+</motion.nav>
 
-{/* HERO SECTION */}
-<section className="min-h-screen flex flex-col justify-center items-center text-center heroGlow fade px-6">
-<img src="your-photo.jpg" className="w-44 h-44 rounded-full shadow-2xl mb-6 object-cover"/>
-<h1 className="text-6xl font-extrabold mb-4">Customer Experience Specialist</h1>
-<p className="max-w-xl opacity-80 mb-8 text-lg">
-Delivering world-class customer support for global brands with strong CRM expertise, communication excellence, and proven customer satisfaction impact.
-</p>
+{/* HERO */}
+<section className="min-h-screen flex flex-col justify-center items-center text-center heroGlow px-6">
+<motion.img initial={{scale:0}} animate={{scale:1}} transition={{duration:0.8}} src="your-photo.jpg" className="w-44 h-44 rounded-full shadow-2xl mb-6 object-cover float"/>
+<motion.h1 initial={{opacity:0,y:30}} animate={{opacity:1,y:0}} className="text-6xl font-extrabold mb-4">Customer Experience Specialist</motion.h1>
+<motion.p initial={{opacity:0}} animate={{opacity:1}} transition={{delay:.4}} className="max-w-xl opacity-80 mb-8 text-lg">
+Delivering world-class customer support with CRM expertise, strong communication, and global client handling.
+</motion.p>
 <div className="flex gap-5">
-<a href="resume.pdf" download className="bg-blue-600 px-8 py-3 rounded-full shadow-xl">Download Resume</a>
-<a href="#contact" className="glass px-8 py-3">Hire Me</a>
+<a href="resume.pdf" download className="bg-blue-600 px-8 py-3 rounded-full shadow-xl hover:scale-105 transition">Download Resume</a>
+<a href="#contact" className="glass px-8 py-3 hover:scale-105 transition">Hire Me</a>
 </div>
 </section>
 
 {/* EXPERTISE */}
-<section className="max-w-6xl mx-auto p-14 fade">
+<section className="max-w-6xl mx-auto p-14">
 <h2 className="text-4xl font-bold text-center mb-12">Core Expertise</h2>
 <div className="grid md:grid-cols-3 gap-8">
-<div className="glass p-7 card3d">
-<h3 className="font-bold mb-3">Voice Support</h3>
-<p>International inbound/outbound customer calls resolving logistics, finance, and order issues.</p>
-</div>
-<div className="glass p-7 card3d">
-<h3 className="font-bold mb-3">Chat & Email Support</h3>
-<p>Fast, professional written communication improving customer satisfaction.</p>
-</div>
-<div className="glass p-7 card3d">
-<h3 className="font-bold mb-3">CRM & Operations</h3>
-<p>Ticketing systems, documentation, reporting, workflow optimization.</p>
-</div>
+{[
+["Voice Support","International customer call handling."],
+["Chat & Email","Fast professional written support."],
+["CRM Operations","Ticketing, reporting & workflow optimization."]
+].map((item,i)=>(
+<motion.div key={i} initial={{opacity:0,y:40}} whileInView={{opacity:1,y:0}} viewport={{once:true}} className="glass p-7 hover:scale-105 transition">
+<h3 className="font-bold mb-3">{item[0]}</h3>
+<p>{item[1]}</p>
+</motion.div>
+))}
 </div>
 </section>
 
-{/* IMPACT SECTION */}
-<section className="p-14 fade">
+{/* IMPACT */}
+<section className="p-14">
 <h2 className="text-4xl font-bold text-center mb-10">Professional Impact</h2>
 <div className="grid md:grid-cols-2 gap-6 max-w-5xl mx-auto">
-<div className="glass p-6">✔ Improved customer satisfaction through efficient resolution</div>
-<div className="glass p-6">✔ Supported Amazon North America customer operations</div>
-<div className="glass p-6">✔ Insurance claims & policy support expertise</div>
-<div className="glass p-6">✔ Remote global team collaboration</div>
-</div>
-</section>
-
-{/* TESTIMONIALS */}
-<section className="p-14 fade">
-<h2 className="text-4xl font-bold text-center mb-10">Recruiter Feedback</h2>
-<div className="max-w-4xl mx-auto space-y-6">
-<div className="glass p-6">⭐ "Excellent communication skills and professionalism." – Team Lead</div>
-<div className="glass p-6">⭐ "Consistent performer with strong customer focus." – Operations Manager</div>
+{[
+"Improved customer satisfaction",
+"Amazon North America support",
+"Insurance process expertise",
+"Remote global teamwork"
+].map((t,i)=>(
+<motion.div key={i} initial={{opacity:0,x:-40}} whileInView={{opacity:1,x:0}} viewport={{once:true}} className="glass p-6">✔ {t}</motion.div>
+))}
 </div>
 </section>
 
 {/* CONTACT */}
-<section id="contact" className="text-center p-14 fade">
-<h2 className="text-4xl font-bold mb-6">Contact</h2>
+<section id="contact" className="text-center p-14">
+<motion.h2 initial={{opacity:0}} whileInView={{opacity:1}} className="text-4xl font-bold mb-6">Contact</motion.h2>
 <p>Email: adhyanshpaswan09@gmail.com</p>
 <p>Phone: +91 8103665109, 9691352809</p>
 <p>Indore, India</p>
@@ -108,4 +103,3 @@ ReactDOM.createRoot(document.getElementById('root')).render(<App/>);
 </script>
 </body>
 </html>
-
