--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Sourabh Paswan | Portfolio</title>
+<title>Sourabh Paswan Recruiter Portfolio</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-body{font-family:Inter,sans-serif}
-.fadein{animation:fadein 1s ease}
-@keyframes fadein{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
+body {font-family:Poppins, sans-serif;}
+.glass {background:rgba(255,255,255,0.08); backdrop-filter:blur(18px); border-radius:20px; border:1px solid rgba(255,255,255,0.15);} 
+.fade {animation:fade 1.2s ease forwards;}
+@keyframes fade {from{opacity:0; transform:translateY(30px);} to{opacity:1; transform:translateY(0);}}
+.card3d:hover {transform:rotateY(8deg) scale(1.05); transition:0.4s ease;}
 </style>
 </head>
 <body>
@@ -23,44 +25,79 @@ function App(){
 const [dark,setDark]=React.useState(true);
 
 return (
-<div className={dark?"bg-black text-white min-h-screen":"bg-gray-100 text-black min-h-screen"}>
+<div className={dark?"bg-gradient-to-br from-black via-gray-900 to-black text-white":"bg-gray-100 text-black"}>
 
-<nav className="flex justify-between items-center px-8 py-4 backdrop-blur sticky top-0">
+{/* NAV */}
+<nav className="flex justify-between items-center px-8 py-4 sticky top-0 backdrop-blur z-50">
 <h1 className="text-2xl font-bold">Sourabh Paswan</h1>
 <div className="flex gap-4">
-<button onClick={()=>setDark(!dark)} className="border px-4 py-1 rounded">Mode</button>
-<a href="https://wa.me/918103665109" target="_blank" className="bg-green-500 px-4 py-1 rounded text-white">WhatsApp</a>
+<button onClick={()=>setDark(!dark)} className="glass px-4 py-1">Mode</button>
+<a href="https://wa.me/918103665109" target="_blank" className="bg-green-500 px-5 py-1 rounded-full">WhatsApp</a>
 </div>
 </nav>
 
-<section className="text-center py-20 fadein">
-<img src="your-photo.jpg" className="w-40 h-40 rounded-full mx-auto mb-6 object-cover shadow-xl"/>
+{/* HERO */}
+<section className="min-h-screen flex flex-col justify-center items-center text-center px-6 fade">
+<img src="your-photo.jpg" className="w-44 h-44 rounded-full shadow-2xl mb-6 object-cover"/>
 <h1 className="text-5xl font-bold mb-4">Customer Support Specialist</h1>
-<p className="max-w-xl mx-auto mb-6 opacity-80">
-2+ years BPO experience handling international customer support,
-CRM workflows, logistics queries and customer satisfaction improvement.
+<p className="max-w-xl opacity-80 mb-6">
+Helping global businesses deliver exceptional customer experience through voice, chat, email, and CRM support.
 </p>
-<a href="resume.pdf" download className="bg-blue-600 px-6 py-3 rounded-full text-white">Download Resume</a>
-</section>
-
-<section className="max-w-5xl mx-auto p-10 fadein">
-<h2 className="text-3xl font-bold mb-6 text-center">Core Expertise</h2>
-<div className="grid md:grid-cols-3 gap-6">
-<div className="p-6 border rounded">Voice Support</div>
-<div className="p-6 border rounded">Chat & Email Support</div>
-<div className="p-6 border rounded">CRM Operations</div>
+<div className="flex gap-4">
+<a href="resume.pdf" download className="bg-blue-600 px-6 py-3 rounded-full">Download Resume</a>
+<a href="#contact" className="glass px-6 py-3">Hire Me</a>
 </div>
 </section>
 
-<section id="contact" className="text-center py-16 fadein">
-<h2 className="text-3xl font-bold mb-4">Contact</h2>
+{/* CUSTOMER SUPPORT TYPES */}
+<section className="max-w-6xl mx-auto p-12 fade">
+<h2 className="text-4xl font-bold text-center mb-10">Customer Support Expertise</h2>
+<div className="grid md:grid-cols-3 gap-8">
+<div className="glass p-6 card3d">
+<h3 className="font-bold mb-2">Voice Support</h3>
+<p>Handled international calls resolving logistics, order, and financial issues.</p>
+</div>
+<div className="glass p-6 card3d">
+<h3 className="font-bold mb-2">Chat & Email</h3>
+<p>Non‑voice customer assistance with fast response and documentation.</p>
+</div>
+<div className="glass p-6 card3d">
+<h3 className="font-bold mb-2">CRM Operations</h3>
+<p>Ticket management, reporting, customer insights, workflow optimization.</p>
+</div>
+</div>
+</section>
+
+{/* WHY HIRE */}
+<section className="max-w-5xl mx-auto p-10 fade">
+<h2 className="text-4xl font-bold text-center mb-6">Why Recruiters Hire Me</h2>
+<div className="grid md:grid-cols-2 gap-6">
+<div className="glass p-5">✔ 2+ Years BPO Experience</div>
+<div className="glass p-5">✔ Amazon + Insurance Support</div>
+<div className="glass p-5">✔ International Client Handling</div>
+<div className="glass p-5">✔ Customer Satisfaction Focus</div>
+</div>
+</section>
+
+{/* TESTIMONIALS */}
+<section className="p-12 fade">
+<h2 className="text-4xl font-bold text-center mb-8">Recruiter Testimonials</h2>
+<div className="max-w-4xl mx-auto space-y-6">
+<div className="glass p-6">⭐ "Strong communicator and dependable support professional." – Supervisor</div>
+<div className="glass p-6">⭐ "Great at handling customers calmly and efficiently." – Manager</div>
+</div>
+</section>
+
+{/* CONTACT */}
+<section id="contact" className="text-center p-12 fade">
+<h2 className="text-4xl font-bold mb-6">Contact</h2>
 <p>Email: adhyanshpaswan09@gmail.com</p>
-<p>Phone: +91 8103665109</p>
+<p>Phone: +91 8103665109, 9691352809</p>
 <p>Indore, India</p>
 </section>
 
-<footer className="text-center py-6 opacity-70">
-© 2026 Sourabh Paswan Portfolio
+<footer className="text-center p-6 opacity-70">
+© 2026 Sourabh Paswan Recruiter Portfolio
 </footer>
 
 </div>
@@ -70,3 +107,4 @@ ReactDOM.createRoot(document.getElementById('root')).render(<App/>);
 </script>
 </body>
 </html>
+
