--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Sourabh Paswan | Premium Portfolio</title>
+<meta name="description" content="Sourabh Paswan Customer Support Specialist Portfolio — 2+ years BPO experience, Amazon support, CRM expertise, voice/chat/email support." />
+<title>Sourabh Paswan | Customer Support Portfolio</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -37,10 +38,10 @@ return (
 </nav>
 
 <section className="text-center py-24 fade">
-<img src="your-photo.jpg" className="w-44 h-44 rounded-full mx-auto mb-6 object-cover shadow-2xl"/>
+<img src="your-photo.jpg" alt="Sourabh Paswan Profile" className="w-44 h-44 rounded-full mx-auto mb-6 object-cover shadow-2xl"/>
 <h1 className="text-5xl font-extrabold mb-4">Customer Support Specialist</h1>
 <p className="max-w-xl mx-auto opacity-80 mb-6">
-Helping global customers with voice, chat & email support. Experienced in Amazon North America support, CRM systems, logistics queries, financial assistance and customer satisfaction optimization.
+2+ years BPO experience supporting international customers (Amazon North America + Insurance processes). Skilled in voice, chat, email support, CRM operations, logistics coordination and customer satisfaction improvement.
 </p>
 <div className="flex justify-center gap-4">
 <a href="resume.pdf" download className="bg-blue-600 px-6 py-3 rounded-full text-white shadow-xl hover:scale-105 transition">Download Resume</a>
@@ -49,33 +50,13 @@ Helping global customers with voice, chat & email support. Experienced in Amazon
 </section>
 
 <section className="max-w-6xl mx-auto p-12 fade">
-<h2 className="text-4xl font-bold text-center mb-10">Why Recruiters Choose Me</h2>
+<h2 className="text-4xl font-bold text-center mb-10">Professional Impact</h2>
 <div className="grid md:grid-cols-3 gap-8">
-<div className="glass p-6 rounded-2xl card3d">✔ 2+ Years International BPO Experience</div>
-<div className="glass p-6 rounded-2xl card3d">✔ Amazon Customer Support Exposure</div>
-<div className="glass p-6 rounded-2xl card3d">✔ CRM, Logistics & Financial Support</div>
-<div className="glass p-6 rounded-2xl card3d">✔ Excellent English & Hindi Communication</div>
-<div className="glass p-6 rounded-2xl card3d">✔ Proven Customer Satisfaction Improvement</div>
-<div className="glass p-6 rounded-2xl card3d">✔ Remote Work & Night Shift Adaptability</div>
+<div className="glass p-6 rounded-2xl card3d">✔ Improved customer satisfaction & resolution efficiency</div>
+<div className="glass p-6 rounded-2xl card3d">✔ Experience with international customer expectations</div>
+<div className="glass p-6 rounded-2xl card3d">✔ Strong CRM documentation & workflow discipline</div>
 </div>
-</section>
-
-<section className="max-w-6xl mx-auto p-12 fade">
-<h2 className="text-4xl font-bold text-center mb-10">Customer Support Expertise</h2>
-<div className="grid md:grid-cols-3 gap-8">
-<div className="glass p-8 rounded-2xl card3d text-center">
-<h3 className="text-xl font-bold mb-2">Voice Support</h3>
-<p>Handling live customer calls with professional communication.</p>
-</div>
-<div className="glass p-8 rounded-2xl card3d text-center">
-<h3 className="text-xl font-bold mb-2">Chat & Email</h3>
-<p>Fast, clear written communication for customer issues.</p>
-</div>
-<div className="glass p-8 rounded-2xl card3d text-center">
-<h3 className="text-xl font-bold mb-2">CRM Operations</h3>
-<p>Ticket handling, documentation & workflow optimization.</p>
-</div>
-</div>
+<p className="text-center opacity-70 mt-6">(Add measurable metrics if available: CSAT %, resolution rate, ticket volume etc.)</p>
 </section>
 
 <section className="max-w-6xl mx-auto p-12 fade">
@@ -83,31 +64,17 @@ Helping global customers with voice, chat & email support. Experienced in Amazon
 <div className="grid md:grid-cols-2 gap-8">
 
 <div className="glass p-8 rounded-2xl card3d">
-<h3 className="text-xl font-bold mb-2">Amazon North America Customer Support</h3>
-<p><b>Challenge:</b> High volume logistics and order queries from international customers.</p>
-<p><b>Action:</b> Used CRM tracking, improved communication clarity and faster ticket handling.</p>
-<p><b>Result:</b> Improved customer satisfaction and reduced repeat queries.</p>
+<h3 className="text-xl font-bold mb-2">Amazon North America Support</h3>
+<p><b>Challenge:</b> High volume logistics and order queries.</p>
+<p><b>Action:</b> CRM tracking, faster response strategy.</p>
+<p><b>Result:</b> Improved satisfaction & reduced repeat contacts.</p>
 </div>
 
 <div className="glass p-8 rounded-2xl card3d">
-<h3 className="text-xl font-bold mb-2">Insurance Claims Support (India)</h3>
-<p><b>Challenge:</b> Customers confused about policy claims and documentation.</p>
-<p><b>Action:</b> Provided simplified explanations, follow‑ups and structured CRM documentation.</p>
-<p><b>Result:</b> Higher customer trust and smoother claim resolution.</p>
-</div>
-
-<div className="glass p-8 rounded-2xl card3d">
-<h3 className="text-xl font-bold mb-2">New Associate Training Initiative</h3>
-<p><b>Challenge:</b> New hires lacked process clarity.</p>
-<p><b>Action:</b> Assisted in training sessions, shared best practices.</p>
-<p><b>Result:</b> Better onboarding efficiency and team productivity.</p>
-</div>
-
-<div className="glass p-8 rounded-2xl card3d">
-<h3 className="text-xl font-bold mb-2">CRM Workflow Optimization</h3>
-<p><b>Challenge:</b> Inconsistent ticket documentation.</p>
-<p><b>Action:</b> Followed structured CRM logging and knowledge sharing.</p>
-<p><b>Result:</b> Improved service consistency and faster issue resolution.</p>
+<h3 className="text-xl font-bold mb-2">Insurance Claims Support</h3>
+<p><b>Challenge:</b> Policy confusion among customers.</p>
+<p><b>Action:</b> Clear communication & structured documentation.</p>
+<p><b>Result:</b> Faster claim resolution & trust improvement.</p>
 </div>
 
 </div>
@@ -117,23 +84,24 @@ Helping global customers with voice, chat & email support. Experienced in Amazon
 <h2 className="text-4xl font-bold text-center mb-8">Recruiter Testimonials</h2>
 <div className="space-y-6">
 <div className="glass p-6 rounded-xl card3d">
-⭐ "Professional, reliable and excellent communicator with customers." — Team Lead
+⭐ "Professional, reliable and excellent communicator." — Team Manager
 </div>
 <div className="glass p-6 rounded-xl card3d">
-⭐ "Strong CRM knowledge and consistent performance." — Operations Manager
+⭐ "Consistent performance and strong CRM knowledge." — Operations Manager
 </div>
 </div>
 </section>
 
 <section id="contact" className="text-center py-16 fade">
-<h2 className="text-4xl font-bold mb-4">Contact</h2>
+<h2 className="text-4xl font-bold mb-4">Let’s Work Together</h2>
 <p>Email: adhyanshpaswan09@gmail.com</p>
 <p>Phone: +91 8103665109</p>
 <p>Indore, India</p>
+<a href="mailto:adhyanshpaswan09@gmail.com" className="inline-block mt-6 bg-blue-600 px-6 py-3 rounded-full text-white shadow-xl hover:scale-105 transition">Send Email</a>
 </section>
 
 <footer className="text-center py-6 opacity-70">
-© 2026 Sourabh Paswan Premium Portfolio
+© 2026 Sourabh Paswan • Customer Support Portfolio
 </footer>
 
 </div>
@@ -143,3 +111,5 @@ ReactDOM.createRoot(document.getElementById('root')).render(<App/>);
 </script>
 </body>
 </html>
+
+
