--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ return (
 <div className="glass p-6 rounded-2xl card3d">✔ Experience with international customer expectations</div>
 <div className="glass p-6 rounded-2xl card3d">✔ Strong CRM documentation & workflow discipline</div>
 </div>
-<p className="text-center opacity-70 mt-6">(Add measurable metrics if available: CSAT %, resolution rate, ticket volume etc.)</p>
+<p className="text-center opacity-70 mt-6">( CSAT Above 85%, resolution rate 90% )</p>
 </section>
 
 <section className="max-w-6xl mx-auto p-12 fade">
@@ -111,5 +111,6 @@ ReactDOM.createRoot(document.getElementById('root')).render(<App/>);
 </script>
 </body>
 </html>
+
 
 
